--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <!DOCTYPE html>
 <html>
   <h1 style="text-align:center;font-family:signpainter;">My name is Marcos Garza, welcome to my site! </h1>
-
-  ![thebean](https://raw.githubusercontent.com/marcosgarzadiaz/marcosgarzadiaz.github.io/master/IMG_1259.jpg)
   
-<center><img src="https://raw.githubusercontent.com/marcosgarzadiaz/marcosgarzadiaz.github.io/master/IMG_1259.jpg"><img src="This-Is-Me.JPG" width="400" height"266"><img src="chicago.JPG" width="400" height="266" />
+<img src="https://raw.githubusercontent.com/marcosgarzadiaz/marcosgarzadiaz.github.io/master/IMG_1259.jpg" width="400" height"266"><img src="chicago.JPG" width="400" height="266" />
   
 <b><h1 style="text-align:center;font-family:signpainter;font-style:bold;> align="center"> ABOUT ME </h1>
 <p style ="text-align:center;font-family:heiti sc;font-size:16px;font-style:italic"> 
