--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <h1 style="text-align: center;font-family:signpainter;">Thanks for visiting!</h1>
   
-<body bgcolor="FED8B1">
+<body bgcolor="ADD8E6">
 
 </body>
 
