--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
 <h1 style="text-align: center;font-family:signpainter;">My Favorite Website</h1>
   
-<p style="text-align: center;font-family:heiti sc;"><a href="https://www.youtube.com/channel/UChNEqWM0HWbhb-e44nMLm1Q">Click Here</a> to go to my YouTube channel!</p>
+<p style="text-align: center;font-family:heiti sc;"><a href="https://www.adultswim.com/etcetera/choir/">Click Here</a> to go to the world's second greatest website.</p>
 
 <h1 style="text-align: center;font-family:signpainter;">Thanks for visiting!</h1>
   
