--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
 <p style ="text-align:center;font-family:heiti sc;font-size:16px;font-style:italic"> 
  Born and raised in south texas, I transferred to the University of Texas at Austin as a sophomore in the fall of 2020. I am pursuing a degree in finance, but am also deeply interested in music theory and photography. On my free time I like learning about day trading, going on runs, and taking pictures! Here are some that I have sold recently: </p>
   
-<center><img src="https://github.com/marcosgarzadiaz/marcosgarzadiaz.github.io/blob/master/DSC00681.jpg?raw=true" width="450" height="562.5"><img src="https://github.com/marcosgarzadiaz/marcosgarzadiaz.github.io/blob/master/DSC00636.jpg?raw=true" width="450" height="562.5"><img src="https://github.com/marcosgarzadiaz/marcosgarzadiaz.github.io/blob/master/Cali%20Photo%20Print.jpg?raw=true" width="450" height"562.5"/>
-  
-<p style ="text-align:center;font-family:heiti sc;font-size:16px;font-style:italic"> 
-  I can usually be found at a coffeeshop, somewhere outside on campus, or, from time-to-time, running around in Disney World. My favorite foods include Pirate's Booty (it's good, trust me) and pasta, and I could probably survive on cold brew coffee. The way to my heart is a classic chocolate milkshake or a random trip to Target!  </p>
+<center><img src="https://github.com/marcosgarzadiaz/marcosgarzadiaz.github.io/blob/master/DSC00681.jpg?raw=true" width="450" height="562.5"><img src="https://github.com/marcosgarzadiaz/marcosgarzadiaz.github.io/blob/master/Cali%20Photo%20Print.jpg?raw=true" width="450" height"562.5"><img src="https://github.com/marcosgarzadiaz/marcosgarzadiaz.github.io/blob/master/DSC00636.jpg?raw=true" width="450" height="562.5"/>
   
 <h1 style="text-align: center;font-family:signpainter;">My Favorite Website</h1>
   
 <p style="text-align: center;font-family:heiti sc;"><a href="https://www.adultswim.com/etcetera/choir/">Click Here</a> to go to the world's second greatest website.</p>
 
-<h1 style="text-align: center;font-family:signpainter;">Thanks for visiting!</h1>
+<h1 style="text-align: center;font-family:signpainter;">Thanks for viewing!</h1>
   
 <body bgcolor="ADD8E6">
 
