--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
 <p style="text-align: center;font-family:heiti sc;"><a href="https://www.adultswim.com/etcetera/choir/">Click Here</a> to go to the world's second greatest website.</p>
 
-<h1 style="text-align: center;font-family:signpainter;">Thanks for viewing!</h1>
+<h1 style="text-align: center;font-family:signpainter;">Thanks for stopping by!</h1>
   
 <body bgcolor="ADD8E6">
 
